[package]
name = "rrlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.3.4", features = ["derive"] }
futures = "0.3.28"
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["full"] }
